feat: add incident remediation api
